@@ -1,3 +1,9 @@
+2008-10-22  Scott Ellington <scott.ellington@gmail.com> 
+
+	* WellKnownText.cs: add multipolygon wkt support
+	* Polygon.cs: add default ctor
+	* Ring.cs: add Close() and Validate()
+
 2008-10-20  Scott Ellington <scott.ellington@gmail.com> 
 
 	
